--- a/src/template/article/index.html
+++ b/src/template/article/index.html
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+{% extends "../layout.html" %}
 
-    <link rel="stylesheet" href="/css/article/index.css">
+{% block css %}
+<link rel="stylesheet" href="/css/article/index.css" />
+{% endblock %}
 
-    <title>MyTechBlog</title>
-  </head>
+{% block js %}
+<script src="/js/article/index.js"></script>
+{% endblock %}
 
-  <body>
-    <h1>MyTechBlog</h1>
-    <p>{{ Message }}</p>
-    <p>{{ Now }}</p>
-
-    <script src="/js/article/index.js"></script>
-  </body>
-</html>
+{% block content %}
+<p>{{ Message }}</p>
+<p>{{ Now }}</p>
+{% endblock %}
