--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -36,12 +36,12 @@ a {
     color: #bbb;
   }
 
-  /* html {
+  html {
     height: 100%;
     font-size: 10px;
-  } */
+  }
   
-  /* body {
+  body {
     height: 100%;
     background: #eee;
     font-size: 16px;
@@ -49,7 +49,7 @@ a {
       メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
     display: grid;
     grid-template-rows: max-content 1fr max-content;
-  } */
+  }
 
   .l-col {
     padding-left: 4%;
