--- a/src/template/layout.html
+++ b/src/template/layout.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{% block title %}MyTechBlog{% endblock %}</title>
 
-    <!-- <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" /> -->
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
 
     <link rel="stylesheet" href="/css/layout.css" />
     {% block css %}{% endblock %}
